# speakly

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: benchmark.py  speakly-raycast.sh
src/speakly/: bench.py  cache.py  cli.py  config.py  config_tui.py  dock.py  nowplaying.py  player.py  progressive_core.py  progressive_edge.py  progressive_elevenlabs.py  progressive_inworld.py  progressive_openai.py  sanitize.py  shortcut.py  titler.py
src/speakly/providers/: __init__.py  edge.py  elevenlabs.py  inworld.py  openai.py
tests/: test_progressive_core.py  test_progressive_eligibility.py  test_sanitize.py
