[project]
name = "speakly"
version = "0.1.0"
description = "Text-to-speech mini-player with floating controls"
requires-python = ">=3.11"
dependencies = [
    "pyqt6>=6.7",
    "typer>=0.12",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.50",
    "python-dotenv>=1.0",
]

[project.scripts]
speakly = "speakly.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speakly"]
